--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@
 :root {
   --nav-color: #000000;  /* The default color of the main navmenu links */
   --nav-hover-color: #870d0d; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
+  --nav-mobile-background-color: #000000; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #000000; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #e7f2f7; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #870d0d; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
