--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2699,7 +2699,7 @@ section,
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-box {
-  background-color: #4b4b4b;
+  background-color: #575757;
   padding: 3rem;
   border-radius: 1rem;
   height: 100%;
